@@ -5,12 +5,12 @@
 <h2>PyGTK Reference Manual</h2>
         
 <h3>PyGTK 2.x (GTK+ 2.x) Reference Manual </h3>
-    Version 2.5.1 Last updated 2004-12-23<br>
+    Version 2.5.2 Last updated 2005-03-05<br>
  
 <ul>
    <li><a href="pygtk2reference/index.html">Reference Manual</a></li>
-   <li><a href="dist/pygtk2reference.tgz">Gzip'd Tarball of Reference Manual</a> (853 kB)<br>
-   <li><a href="dist/pygtk2reference.tbz2">Bzip2'd Tarball of Reference Manual</a> (580 kB)<br>
+   <li><a href="dist/pygtk2reference.tgz">Gzip'd Tarball of Reference Manual</a> (861 kB)<br>
+   <li><a href="dist/pygtk2reference.tbz2">Bzip2'd Tarball of Reference Manual</a> (594 kB)<br>
 </ul>
 
 </div>
