@@ -1,3 +1,9 @@
+2005-03-05  John Finlay  <finlay@moeraki.com>
+
+	* newsitems.py: Announce PyGTK Reference 2.5.2
+
+	* reference.src Update release info.
+
 2005-03-03  Lorenzo Gil Sanchez  <lgs@sicem.biz>
 
 	* applications.src: added Gajim
